# aurman

./: .gitignore  README.md  aur.py  aurman.conf  aurman.py  pacman.py  pyproject.toml  requirements.txt  setup.cfg  spinner.py
aurmanlib/: settings.py
lib/: __init__.py  aur.py  gpg.py  pacman.py  settings.py  util.py
