[metadata]
name = aurman
version = 0.0.1
author = Dhiego Cassiano Fogaça Barbosa
author_email = modscleo4@outlook.com
description = A Python 3 Arch Linux AUR CLI Manager
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/modscleo4/aurman
project_urls =
    Bug Tracker = https://github.com/modscleo4/aurman/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache 2.0
    Operating System :: Linux

[options]
package_dir =
    =
packages = find:
python_requires = >=3.9

[options.packages.find]
where =
